--- a/tasks.css
+++ b/tasks.css
@@ -1,8 +1,15 @@
+.top-margin{
+    margin-top: 286px;
+}
+
 .task-section{
     width: 65%;
+    display: flex;
+    flex-direction: column;
 }
 
 .task-input-form{
+    margin: 0;
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -15,13 +22,12 @@
 }
 
 #tasks-list {
+    margin: 0 0 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding: 0;
-    /* overflow: scroll;
-    height: 84%; */
+    overflow: auto;
 }
 
 .task-input-container{
